fix spinner on mobile

--- a/static/nprogress.css
+++ b/static/nprogress.css
@@ -71,3 +71,10 @@
     0%   { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+@media only screen and (max-width: 600px) {
+    #nprogress .spinner {
+        top: 8px;
+        left: 16px;
+    }
+}
